--- a/index.html
+++ b/index.html
@@ -9,5 +9,20 @@
        <h6>India</h6>
         <p><b>India</b> is my favourite location. It is known for being the most populus <b>democractic</b> country.
         </p>
+        <hr>
+        <h4>Directions to my favourite place</h4>
+        <ol>
+            <li>Take a safe ride from marryville to kansas.</li>
+            <li>Board a plane in Kansas Airport to Chicago.</li>
+            <li>Fly from Chicago to India for a long time.</li>
+            <ol>After reaching india , we have a multiple ways of transport to reach destination place.
+                 <li>Flights</li>
+                 <li>Trains</li>
+                 <li>Cars</li>
+                 <li>Three Wheelers</li>
+            </ol>     
+        </ol>
+        
+
    </body>
 </html>
