--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
             </ol>     
             <li>I mostly use Cars in India to reach my favourite place Warangal</li>
         </ol>
-        
+        <ul>
+            <h4>Things I get with me for maximum enjoyment.</h4>
+            <li>Novels</li>
+            <li>Playing Cards</li>
+            <li>Food</li>
+         </ul>
         
 
 
