added border to table

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <hr>
     <h4>Food Table</h4>
     <p>The following table describes famous food items that someone should try</p>
-    <table>
+    <table border="1">
         <tr>
             <th>Food</th>
             <th>Location</th>
