--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,6 @@
           <p>
             Harley Quinn is the former girlfriend and sidekick to the Joker; a criminal psychologist turned flamboyant criminal menace. While her intentions are typically good, her methods often betray her insanity, Quinn has acted as both ally and enemy to Batman.
         </p>
-        <img src="harley-quinn.jpg"  alt="Superhuman">
+        <img src="harley-quinn.jpg" >
         </body>
         </html>
